src/pages/homePage.css
.splashPage{
    height: auto;
    width: 100%;
}

div .quiz-desc-container {
    height: 450px;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: space-around;
    border-top: solid 2px grey;
}

.quiz-desc {
    height: 360px;
    width: 35%;
    border: solid 1px grey;
    text-align: center;
    transition: background-color 0.75s ease, margin-top 0.75s ease;
    border-radius: 5px;
    &:hover {
        background-color: #e8ebed;
        margin-top: -9px;
    }
    cursor: pointer;
}

.quiz-desc h3 {
    margin-top: 20px;
}

.quiz-desc p {
   margin-left: 35px;
   margin-right: 35px;
}

.quiz-desc a {
    color:black;
    text-decoration: none;
}

